[gd_scene load_steps=7 format=2]

[ext_resource path="res://texture/button_theme.tres" type="Theme" id=1]
[ext_resource path="res://sprites/tourn_bg.png" type="Texture" id=2]
[ext_resource path="res://scenes/tournaments.gd" type="Script" id=3]
[ext_resource path="res://transition_anim.tscn" type="PackedScene" id=4]
[ext_resource path="res://texture/smaller_font.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.105882, 0.282353, 0.109804, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color( 0.109804, 0.0901961, 0.0901961, 0.6 )

[node name="tournaments" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 350.0
margin_right = 550.0
margin_bottom = 750.0
rect_min_size = Vector2( 500, 400 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="international_cup" type="Button" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 1 )
text = "T5 International Cup"
align = 0

[node name="T20_international_cup" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 500.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 1 )
text = "T10 International Cup"
align = 0

[node name="Nations_league" type="Button" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 500.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 1 )
text = "Cricket Champions League"
align = 0

[node name="Custom_tournament" type="Button" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 500.0
margin_bottom = 290.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 1 )
text = "Custom Tournament"
align = 0

[node name="Continue_tournament" type="Button" parent="VBoxContainer"]
margin_top = 320.0
margin_right = 500.0
margin_bottom = 370.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 6 )
text = "Continue Tournament"

[node name="go_back" type="Button" parent="."]
margin_left = 210.0
margin_top = 900.0
margin_right = 429.0
margin_bottom = 959.0
theme = ExtResource( 1 )
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition_anim" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="VBoxContainer/international_cup" to="." method="_on_international_cup_pressed"]
[connection signal="pressed" from="VBoxContainer/T20_international_cup" to="." method="_on_T20_international_cup_pressed"]
[connection signal="pressed" from="VBoxContainer/Nations_league" to="." method="_on_Nations_league_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue_tournament" to="." method="_on_Continue_tournament_pressed"]
[connection signal="pressed" from="go_back" to="." method="_on_go_back_pressed"]
